app/form/fields/ArrayFormField.module.css
.card {
	border: var(--border-style);
	border-radius: var(--radius-box);
	margin: 0;
	padding: 0;
}

.header {
	--header-border-radius: calc(var(--radius-field) - 2px);
	display: flex;
	align-items: center;
	gap: var(--s-2);
	padding: var(--s-2) var(--s-3);
	background-color: var(--color-bg-higher);
	border-bottom: var(--border-style);
	border-radius: var(--header-border-radius) var(--header-border-radius) 0 0;
}

.dragHandle {
	width: var(--s-5);
	height: var(--s-5);
	cursor: grab;
	color: var(--color-text-high);
}

.headerLabel {
	flex: 1;
	font-size: var(--font-xs);
	font-weight: var(--weight-semi);
}

.content {
	padding: var(--s-4);
	display: flex;
	flex-direction: column;
	gap: var(--s-4);
}

.itemInput {
	flex: 1;
}

